--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -24,6 +24,8 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/30/n11558103.md#1" target="_blank">庐山大火烧了三天三夜 中共官媒封锁消息</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/30/n11558103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/L2-150x120.png" align ="left"></a>“十一”前夕，江西庐山发生火灾，接连烧了三天。为了不影响共产党过节，所有媒体均被禁止报导，只有网络消息零星传出。目前起火原因不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 3:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/28/n11553151.md#1" target="_blank">宁杭高速一大客车与货车相撞 至少36死36伤</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/28/n11553151.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Untitled-3-150x120.gif" align ="left"></a>28日，连接江苏南京至浙江杭州的宁杭高速公路，一辆旅游大客车与货车相撞，宜兴警方当日通报称，事故至少造成6人死亡，8人重伤。29日，警方就事故再发通报称，截至28日下午4时，已造成36人死亡，另有36人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 4:27 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/25/n11546432.md#1" target="_blank">消息：谈判恢复后 中方拟购买更多美国猪肉</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/25/n11546432.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/07/707170534351164-150x120.jpg" align ="left"></a>财经通讯社彭博社周三（9月25日）引述中国知情人士的消息说，随着美中准备10月的华盛顿新一轮贸易谈判，以及中共政府正应对国内猪肉短缺之“战”，一些中国企业准备购买更多的美国猪肉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月26日 5:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/28/n11617418.md#1" target="_blank">延安市车载试验装置突爆炸 至少8死5伤</a><br></h3>10月27日，陕西省延安市延长县一车载试验装置完成试验后，在回程途中突然发生爆炸，导致8死5伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 5:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/27/n11616220.md#1" target="_blank">甘肃深夜发生5.7级地震 民众逃到街上</a><br></h3>28日凌晨2时许，甘肃省甘南藏族自治州夏河县发生5.7级地震。合作市、夏河县震感强烈，并伴有余震，民众纷纷在寒冷的深夜外出避险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 6:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/25/n11611902.md#1" target="_blank">河南化工厂爆炸致1人死 珠海商铺突发大火</a><br></h3>10月25日上午，河南一家化工厂发生爆炸，目前已知事故造成1人死亡。现场画面显示，火势凶猛，现场掀起“蘑菇云”。附近居民表示，爆炸发生时自家房子颤抖，家中有玻璃被震碎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 7:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/24/n11609061.md#1" target="_blank">河北兴华钢铁厂发生火灾 导致7人死亡</a><br></h3>10月24日，中共河北应急管理厅网站消息，今天（24日）凌晨日3时30分，邯郸武安河北兴华钢铁有限公司烧结车间皮带通廊着火，导致7人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/24/n11609128.md#1" target="_blank">上海普陀发生严重交通事故 已致5死9伤</a><br></h3>10月24日上午9时25分许，上海金沙江路发生严重交通事故，目前已致5死9伤。有现场目击者回忆事发瞬间时说，一辆小车在行驶时忽然加速冲向人群，一辆白色轿车和几辆电动车避让不及被撞飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 5:32 PM							</td></tr>
@@ -31,11 +33,5 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/15/n11589148.md#1" target="_blank">吉林白城一银行大楼倒塌 致5死4伤</a><br></h3>10月14日6时许，吉林省白城市一家银行办公楼在装修施工中倒塌，导致9人被困，其中5人死亡，4人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 5:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/13/n11585071.md#1" target="_blank">江苏无锡一小吃店爆炸 已致9死10伤</a><br></h3>江苏省无锡市接连发生灾难性事故。10月13日上午11时许，无锡锡山区鹅湖镇新杨路一小吃店发生燃气爆炸。官方称，目前共有15名受伤人员送医，其中6人抢救无效死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/3/n11565381.md#1" target="_blank">浓雾天气 安徽17车连环相撞 至少10人死</a><br></h3>10月3日上午6时40分，因浓雾天气，安徽宁洛高速公路蚌埠段往南京方向196公里处，发生4宗连环车祸，17车相撞，导致10死7伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月03日 8:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/25/n11546125.md#1" target="_blank">河南艾滋血祸揭露者王淑平在美国去世</a><br></h3>9月21日，王淑平医生与丈夫、朋友在美国犹他州盐湖城郊游时，不幸心脏病突发去世，年仅59周岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月26日 12:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/22/n11538408.md#1" target="_blank">湖南大货车冲入集市人群 至少10死16伤</a><br></h3>湖南湘潭市9月22日一早发生严重车祸，一辆货车撞向赶集的人群，多人被卷至车底。截止大纪元发稿，事故造成至少10死16伤。
-
-惨案发生在上午8时40分许，湘潭县内日华村的一个市集，一辆车牌号码为湘A20816的运沙的大货车冲向市集，撞到了多名赶集的行人及大批商贩。目前造成10人死亡，16人受伤，伤者均已送院救治，而涉事司机已经被警方逮捕。
-
-据称，肇事.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 4:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wrrxl289/djy/blob/master/gb/ncid280_5.md#1<br><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncid280_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/ncid280_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_5.htm">http://www.epochtimes.com/gb/ncid280_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
