--- a/gb/ncid281_5.md
+++ b/gb/ncid281_5.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/23/n11341456.md#1" target="_blank">英语外教在中国面临困境</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/23/n11341456.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/c4ffdfeef384a263edbe9c5bdcd712f6-150x120.jpg" align ="left"></a>来自西雅图的美国律师丹·哈里斯发表博客文章，建议外籍教师不要去中国教英文。外教在中国生存状况是否面临困境？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月24日 1:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/21/n11338341.md#1" target="_blank">北京宣传“千兆之城” 网民揭通信真实现状</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/21/n11338341.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/GettyImages-1131489187-2-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>6月20日，“北京将成为国内首批千兆之城”的消息被陆媒热炒，并登上微博热搜榜。网民对此却并不乐观，各地民众纷纷晒出自己的通信体验和现状。专家表示，千兆宽带只是一种宣传手法，实际上无法达到。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月22日 2:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/18/n11330817.md#1" target="_blank">美参议员：中共利用中国学生窃美知识产权</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/18/n11330817.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-518861562-150x120.jpg" align ="left"></a>周一（6月17日），美国一重量级国会议员警告，在不断扩大的美中间谍战中，在美国的中国留学生成为中共窃取美国知识产权的棋子，面临来自北京当局施加的更大压力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月18日 10:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/16/n11326612.md#1" target="_blank">中国电影票房9年来首跌 人次同期少1亿</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/16/n11326612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/VCG111157685873-600x400-150x120.jpg" align ="left"></a>中国电影票房下滑，今年前5个月只有249.41亿元（人民币，下同），相比去年同期下降6.35%；入场人数为6.89亿人次，与去年同比急跌1亿人次，为过去9年来电影票房和入场人次首次下降。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月17日 6:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/8/7/n11438018.md#1" target="_blank">中共下达金马禁令令人不齿 叶德娴：各行各路</a><br></h3>在稍早前发布与金马奖撞期等变相抵制金马奖的消息后，中共国家电影局8月7日直接下达禁令：“暂停大陆影片和人员参加2019年第56届台湾金马影展。”突如其来的消息令人震惊和不齿，曾荣膺金马影后的香港资深艺人叶德娴表示：“勉强没有幸福，各行各路。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月08日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/7/22/n11401219.md#1" target="_blank">中共新疆白皮书被批用谎言编造历史</a><br></h3>继近期国际社会严厉批评中共新疆政策后，中共当局21日发布《新疆的若干历史问题》白皮书进行诡辩，随后遭到“世界维吾尔代表大会”炮轰。另有媒体披露，中共还删除了小学教科书中关于新疆维吾尔人等文章。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 5:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/7/15/n11386237.md#1" target="_blank">家庭投入的无底洞 北大教授批教育双轨制</a><br></h3>在近日北京大学举办的论坛上，北大教授渠敬东指出了现行教育体制的一系列问题，学生的身体健康，心理健康堪忧，而教育双轨制更成了家庭资源无限投放的无底洞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月16日 3:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/6/25/n11344314.md#1" target="_blank">非法办学 深圳一高收费幼儿园现发臭猪肉</a><br></h3>近日，深圳龙岗某幼儿园厨房被发现有发臭的猪肉。据悉，该幼儿园不仅收费高，而且系非法办学。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月25日 3:34 PM							</td></tr>
