--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>九评和退党</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/22/n11605105.md#1" target="_blank">期刊：《九评特刊》166期</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/22/n11605105.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/A4-166-1-150x120.jpg" align ="left"></a>
+
+跨页尺寸点击下载a3-166
+
+单页尺寸点击下载a4-166......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 10:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/20/n11601191.md#1" target="_blank">组图：法轮功纽约布鲁克林游行  震撼人心</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/20/n11601191.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/LD70759-150x120.jpg" align ="left"></a>“金秋送福撒甘露，大法弟子有真相”，在全球退党大潮达三亿四千万人退出中共党、团、队之际，20日（周日）纽约近千名法轮功学员在布鲁克林八大道繁华街区举行盛大游行，十几个方阵延绵十多条街区，彩旗花船、龙腾狮舞、军乐锣鼓，正气威震八方。壮观的游行再一次将法轮大法的美好带给布鲁克林民众。
 
 游行从八大道68街前往42街，历时2个小时，浩浩荡荡的队伍展示上百条中英.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 7:45 AM							</td></tr>
@@ -27,6 +32,7 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank">马国民众声援三退大潮 谴责中共在港暴行</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/2/n11561511.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/01-20190929-Mal-TD-IMG_2141-R-150x120.jpg" align ="left"></a>在刚过的周末（9月29日）下午，马来西亚退党服务中心义工们来到了首都吉隆坡市中心，在人山人海的武吉免登区（Bukit Bintang）举行集会，和民众一起声援3亿4千2百万退出共产党、共青团和少先队的“三退”勇士们；同时抗议中共黑手暴力攻击香港法轮功学员，制造流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月02日 10:11 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank">中共篡政70年 凌晓辉：从反送中看到希望</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/1/n11559592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201150518552519-150x120.jpg" align ="left"></a>为了“国庆70周年”，本应与国同庆的人民却被控制，除了商场不能卖菜刀外，小饭馆被强制停业，医院不准收留病人，长安街附近的居民不能用燃气，甚至，上公厕都要实名登记……有评论表示，如今的中国不是中国人民的，所以这不是国庆，而是国殇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 6:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank">中共随时戒严 泛民及民阵4人发起十一大游行</a><br></h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/30/n11558127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/WhatsApp_Image_2019-10-01_at_12417_AM@1200x1200-150x120.jpeg" align ="left"></a>9月30日下午，三名香港民主派前议员李卓人、何俊仁、梁国雄以及民阵副召集人陈皓桓宣布，四人将以个人身份，承接民阵原来游行路线，于10月1日下午1时由铜锣湾东角道集合，游行到中环遮打道行人专用区。他们表示，此为公民抗命举动，清楚法律后果。他们四人随时都有被捕的危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 3:11 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/21/n11601707.md#1" target="_blank">每日三退声明精选（2019/10/20）</a><br></h3>本人之前由于生长、教育、家庭环境等原因，对社会主义、共产主义等左翼思潮和中共政权（包括与中共亲近的国外政权、政治人物、政治势力）心存幻想。如今随着阅历知识面增加逐渐认清左翼思潮和中共政权的本质和其历史上的种种暴行，现郑重声明退出先前（被学校强迫）加入的中国共产主义青年团、中国共产党少年先锋队等共产党周边组织，从此不再与共产党有任何瓜葛，并且坚定反对社会主义、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 12:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/20/n11599864.md#1" target="_blank">每日三退声明精选（2019/10/19）</a><br></h3>因为一次机会接触了翻墙，从此对中共的真相看清楚了。但是，对于中共的邪恶我可能真的是因为被骗得太久了还没体会到。这次反对送中加上习近平在尼泊尔充满仇恨的言论，让我对这个政权的印象真的完全颠覆了。什么宣传净是骗人，加上身边海外的华人一直都不可信赖，完全不讲真话。现在我决定在网路安全等级（可能是白名单）出来之前，赶快在这里，发出退出党团队的正式声明。我也看透了，大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月20日 11:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/18/n11596085.md#1" target="_blank">每日三退声明精选（2019/10/17）</a><br></h3>在学生时期一直受洗脑教育，不明真相加入了共产党，经历了大半人生，对国内的洗脑宣传越发反感，经过多年翻墙了解历史，了解现实的真相后，才发觉之前的认知和人生价值观的缺陷，在墙外了解到中美贸易战的时事和香港反送中事件的真相，真正了解了CCP的所做所为，为自己加入这个邪恶组织为羞耻，同时也为中国的前途光明担忧起来，希望能在有生之年看到这个邪恶的力量能被消灭，我主动退.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月18日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/10/17/n11593705.md#1" target="_blank">每日三退声明精选（2019/10/16）</a><br></h3>我是一名新闻工作者，是“六四”受迫害者之一。因为不顺从当局的言论而被断送了前程。如今看来，坏事都是好事。我在此申请退出中共团和少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月17日 12:50 PM							</td></tr>
@@ -45,7 +51,5 @@
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/30/n11556078.md#1" target="_blank">每日三退声明精选（2019/09/29）</a><br></h3>邪党过生日闹得鸡犬不宁，民营企业几天一检查，为了到达空气污染不太严重北京周围几百公里一周前就汽车限号出行，很多快递不许进京，往新疆的一切快递干脆停运，也许是发快递的公司怕惹麻烦以免被共产党处罚，虽然歌声不断街道插满红旗，我们从这紧张的空气中看到共产党的恐慌，真是做贼心虚，亡党在即。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月30日 11:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/29/n11553451.md#1" target="_blank">每日三退声明精选（2019/09/28）</a><br></h3>最近有机会到大陆以外的地方去看，看到了很多关于中共的历史真相，也看到了香港反送中的正义之举。早就看透中共，但是苦于自己不知道有这个途径，直到现在我才在这里退出党团队。生于乱世，有种责任。退出党团队，不与中共一起做恶，是在这个被中共搞乱的时代里我自己能够做的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 10:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/25/n11544882.md#1" target="_blank">每日三退声明精选（2019/09/24）</a><br></h3>我在大学时由于成绩优异，被国内共党虚假消息洗脑，在学校和学院领导不断劝说下加入中共。后来来到美国，看到听到大量被中共隐藏和改编的事实真相，十分震惊和愤怒。于是在大约两年半前立即停交党费，与共产党邪恶组织脱离关系。由于担心共匪虚构事实，在此公开声明，我早已与中国共产党脱离关系，并且支持全世界正义联盟打倒共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:38 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/24/n11542396.md#1" target="_blank">每日三退声明精选（2019/09/23）</a><br></h3>本人在大陆长大，自从学会翻墙和去过国外之后，看到了国外和大陆最大的不同就是没有共产独裁的社会其实才是最好的。我当初被中共这些人欺骗，现在一想起来就火大。包括马云等所谓的有钱人，就算是多有钱也保不住他们。有幸看到三退的机会，决定在这里退出中共的党团队，不想被中共牵连。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/9/23/n11539939.md#1" target="_blank">每日三退声明精选（2019/09/22）</a><br></h3>作为一个有良知的人，在学生时期内心的迷蒙和资讯的封闭让我不知道这是怎样的一个组织，在老师的强烈要求下加入共青团(不加入共青团会被老师孤立)，然而在学校中，政治和学习挂钩这么深真的是万分不能让人接受。这一事实令我痛苦不已，从入团那天起就对自己产生了深深的质疑，在对于加入与否这件事上不能自主选择，那么加入真的是一件对的事吗？从那个时候起就对政治制度有了一些侧面的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wrrxl289/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf3046_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_3.htm">http://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
