--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745226.md#1">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/25/n11745357.md#1">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11756134.md#1">谢燕益：杨胜军被非法拘禁致死案之紧急报案举报控告函</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755947.md#1">颜丹：教育经济挤水分 中共忙找替罪羊</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754433.md#1">俞晓薇：明慧新年祝福值得中国和世界深思</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11751284.md#1">岳高：读书被关押的奇闻</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752482.md#1">洪微：美国建太空军 中共沮丧</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752368.md#1">海风：移民美国 隐瞒共产党员身份有麻烦</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752237.md#1">袁斌：成都“飞车党事件”与痛风酒发明人猝死</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753653.md#1">美国故事：国之强必先海军强</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
@@ -31,6 +31,7 @@
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755082.md#1">中共恐吓教师校长 港教育界将举行集会回击</a><br>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11756075.md#1">【新闻看点】法媒：2019 北京的恐怖之年</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755622.md#1">黄奇帆：大陆房地产商10年可能淘汰8万</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755989.md#1">没钱了！中共两部门都喊2020过“紧日子”</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755956.md#1">中共网控再升级  制作及转发视频要实名制</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755722.md#1">传刘鹤本周末赴美签署第一阶段贸易协议</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754080.md#1">组图：12.29中环集会 回顾反送中历程</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754189.md#1">【翻墙必看】中共就香港问题欺骗全世界</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755004.md#1">香港市民：看清楚了中共的真面目</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11756041.md#1">失踪8个月 朝鲜官员李善权现身劳动党全会</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755948.md#1">纳瓦罗：美中或在下周签第一阶段贸易协议</a><br>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754765.md#1">军队公检法司法轮功学员学员祝李大师新年好</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 348,963,933 人
+- 共 348,963,935 人
 ```
 </strong>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
