--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -24,10 +24,9 @@
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752368.md#1">海风：移民美国 隐瞒共产党员身份有麻烦</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11753653.md#1">美国故事：国之强必先海军强</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/14/n11722684.md#1">【独家】帮中共红色资本海外布局的神秘人物</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11705858.md#1">美中关系快速恶化 学者：新冷战已开始</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706190.md#1">【新闻看点】港警一哥赴京前喊话 民阵怒怼</a><br>
-<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/6/n11706171.md#1">王友群：解体中共的重大事件接连发生</a><br>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/28/n11750485.md#1">红色资金介入大选 台查获最大两岸地下汇兑</a><br>
+<a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/24/n11743793.md#1">【独家】大陆医生亲历不寻常器官移植手术（上）</a><br>
 <br><p><a href="https://github.com/wrrxl289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11755082.md#1">中共恐吓教师校长 港教育界将举行集会回击</a><br>
